force-app/main/default/objects/X7S_Ideas_Field_Set__mdt/fields/Field_10__c.field-meta.xml
<CustomField>
    <fullName>Field_10__c</fullName>
    <inlineHelpText>Custom field definition</inlineHelpText>
    <label>Field 10</label>
    <referenceTo>X7S_Ideas_Custom_Field__mdt</referenceTo>
    <relationshipLabel>Idea Field Sets (Field 10)</relationshipLabel>
    <relationshipName>Idea_Field_Sets_10</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>