force-app/main/default/objects/X7S_Ideas_Field_Set__mdt/fields/Field_2__c.field-meta.xml
<CustomField>
    <fullName>Field_2__c</fullName>
    <inlineHelpText>Idea custom field definition</inlineHelpText>
    <label>Field 2</label>
    <referenceTo>X7S_Ideas_Custom_Field__mdt</referenceTo>
    <relationshipLabel>Idea Field Sets 2</relationshipLabel>
    <relationshipName>Idea_Field_Sets_2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>